# goit-pythonweb-hw-012

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  example.env  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 25f98c864eb0_added_role_column_to_users.py  35dde15b1389_create_users_table.py  c9e127f5f4ce_initial_migration.py
api/: auth.py  contacts.py  instances.py  test_auth_api.py  test_contacts_api.py  test_users_api.py  users.py
clients/: cloudinary_client.py  fast_api_mail_client.py  redis_client.py
docs/: conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
repositories/: contact_repository.py  test_contact_repository.py  test_user_repository.py  user_repository.py
schemas/: auth.py  contacts.py  users.py
services/: auth_service.py  contact_service.py  test_auth_service.py  test_contact_service.py  test_user_service.py  user_service.py
